added java.runtime.version for heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=email-service
+java.runtime.version=11
 application.version=@project.version@
 spring.profiles.active=@spring.profiles.active@
